[package]
name = "arbtest"
version = "0.3.2"
description = "A minimalist property-based testing library based on arbitrary"
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/arbtest"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"

exclude = [".github/", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
arbitrary = "1.3.0"

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive" ] }
regex = { version = "0.1.5", package = "regex-lite" }
